# fre-python-tools

./: README.md  environment.yml  meta.yaml  pyproject.toml  setup.cfg
.github/workflows/: pylint.yml  python-package-conda.yml
cmor-mixer/: CMIP6_day.json  CMORmixer.py  GFDL-ESM4_CMOR-day_historical.lst  README.md
examples/: run_timavgs_CLI_examples.sh  timavgs_CLI_example_funcs.sh
fre_python_tools/cmor-mixer/: CMOR_input_ESM4_historical.json
fre_python_tools/cmor_mixer/: CMORmixer.py  README.md
fre_python_tools/generate_time_averages/: NOTES.md  README.md  __init__.py  __main__.py  cdoTimeAverager.py  clock_with_epmt.sh  frenctoolsTimeAverager.py  frepytoolsTimeAverager.py  generate_time_averages.py  peekatfiles.ncl  peekatfiles.py  printarray.py  run.sh  run_timavgs_CLI_examples.sh  setupenv.sh  slurmSubmit.sh  timavgs_CLI_examples.sh  timeAverager.py
fre_python_tools/generate_time_averages/prof/: README.md  clock_with_epmt.out  epmt-example.sh  prof.stats  prof2.stats  some_stats
fre_python_tools/generate_time_averages/t/: timavgs_CLI_examples.sh
fre_python_tools/utilities/: multiply_duration.py  subtract_durations.py
tests/: run_timavgs_CLI_examples.sh  test_generate_time_averages.py  timavgs_CLI_examples.sh
tests/generate_time_averages_test_files/: run_timavgs_CLI_examples.sh  timavgs_CLI_examples.sh
tests/time_avg_test_files/: cdo_timmean_CLI_test_atmos_LWP_1979_5y.nc  cdo_ymonmean_CLI_test_atmos_LWP_1979_5y.nc  cdo_yseasmean_CLI_test_atmos_LWP_1979_5y.nc  ymonmean_atmos.197901-198312.LWP.nc  yseasmean_atmos.197901-198312.LWP.nc
(+7 files in other folders)
