[metadata]
name = fre-python-tools
#version = attr: fre-python-tools.VERSION
version = 0.0.1
author = GFDL workflow team
author_email = oar.gfdl.workflow@noaa.gov
description = Python-based tools and interfaces to be used by FRE workflows
long_description = file: README.md, LICENSE.md, SECURITY.md, AUTHORS.txt
license = Lesser General Public License (LGPL)
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    metomi.isodatetime

#[options.package_data]
#* = *.txt, *.rst, *.md
#hello = *.msg

[options.entry_points]
console_scripts =
    multiply-duration = fre_python_tools.utilities.multiply_duration:main
    subtract-durations = fre_python_tools.utilities.subtract_durations:main
	generate-time-average = fre_python_tools.generate_time_averages.generate_time_averages:main
    cmor-mixer = fre_python_tools.cmor_mixer.CMORmixer:main

#[options.extras_require]
#pdf = ReportLab>=1.2; RXP
#rest = docutils>=0.3; pack ==1.1, ==1.3

#[options.packages.find]
#exclude =
#    examples*
#    tools*
#    docs*
#    my_package.tests*
